@@ -488,8 +488,11 @@ void TreeTemplateTools::setVoidBranchLengths(Node & node, double brLen)
 
 void TreeTemplateTools::scaleTree(Node & node, double factor) throw (NodeException)
 {
-  if(!node.hasDistanceToFather()) throw NodeException("TreeTemplateTools::scaleTree(). Branch with no length", &node);
-  node.setDistanceToFather(node.getDistanceToFather() * factor);
+  if(node.hasFather())
+  {
+    if(!node.hasDistanceToFather()) throw NodeException("TreeTemplateTools::scaleTree(). Branch with no length", &node);
+    node.setDistanceToFather(node.getDistanceToFather() * factor);
+  }
   for(unsigned int i = 0; i < node.getNumberOfSons(); i++)
   {
     scaleTree(* node.getSon(i), factor);
